--- a/fabric-samples/test-network/configtx/configtx.yaml
+++ b/fabric-samples/test-network/configtx/configtx.yaml
@@ -201,8 +201,9 @@ Application: &ApplicationDefaults
 Orderer: &OrdererDefaults
 
     # Orderer Type: The orderer implementation to start
-    OrdererType: etcdraft
-    
+    # OrdererType: etcdraft
+    OrdererType: solo
+
     # Addresses used to be the list of orderer addresses that clients and peers
     # could connect to.  However, this does not allow clients to associate orderer
     # addresses and orderer organizations which can be useful for things such
@@ -211,12 +212,12 @@ Orderer: &OrdererDefaults
     Addresses:
         - orderer.example.com:7050
 
-    EtcdRaft:
-        Consenters:
-        - Host: orderer.example.com
-          Port: 7050
-          ClientTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-          ServerTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+    # EtcdRaft:
+    #     Consenters:
+    #     - Host: orderer.example.com
+    #       Port: 7050
+    #       ClientTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+    #       ServerTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
 
     # Batch Timeout: The amount of time to wait before creating a batch
     BatchTimeout: 2s
