--- a/fabric-samples/test-network/organizations/ccp-template.yaml
+++ b/fabric-samples/test-network/organizations/ccp-template.yaml
@@ -16,7 +16,7 @@ organizations:
     - ca.org${ORG}.example.com
 peers:
   peer0.org${ORG}.example.com:
-    url: grpcs://localhost:${P0PORT}
+    url: grpc://localhost:${P0PORT}
     tlsCACerts:
       pem: |
           ${PEERPEM}
