--- a/fabric-samples/test-network/docker/docker-compose-test-net.yaml
+++ b/fabric-samples/test-network/docker/docker-compose-test-net.yaml
@@ -80,7 +80,7 @@ services:
         - ../organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls:/etc/hyperledger/fabric/tls
         - peer0.org1.example.com:/var/hyperledger/production
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
-    command: peer node start
+    command: peer node start --peer-chaincodedev=true
     ports:
       - 7051:7051
       - 17051:17051
